--- a/DemoAPI/Views/Shared/_Layout.cshtml
+++ b/DemoAPI/Views/Shared/_Layout.cshtml
@@ -7,6 +7,61 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
+    <style>
+        body {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 13px;
+            display: flex;
+            flex-direction: column;
+            max-height: 100vh;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        }
+
+        .members-count,
+        .members-list,
+        .messages {
+            border: 1px solid #e4e4e4;
+            padding: 15px;
+            margin-bottom: 15px;
+        }
+
+        .messages {
+            height: 100px;
+            flex-shrink: 1;
+            overflow: auto;
+        }
+
+        .message {
+            padding: 5px 0;
+        }
+
+            .message .member {
+                display: inline-block;
+            }
+
+        .member {
+            padding-right: 10px;
+            position: relative;
+        }
+
+        .message-form {
+            display: flex;
+            flex-shrink: 0;
+        }
+
+        .message-form__input {
+            flex-grow: 1;
+            border: 1px solid #dfdfdf;
+            padding: 10px 15px;
+            font-size: 16px;
+        }
+
+        .message-form__button {
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -27,15 +82,23 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
+    <div class="container body-content" style="margin-top: 50px">
+        <div class="row">
+            <div class="col-lg-3">
+                @Html.Partial("Chat")
+            </div>
+
+            <div class="col-lg-9">
+                @RenderBody()
+            </div>
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
 
-   
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
