--- a/DemoAPI/Views/Shared/Chat.cshtml
+++ b/DemoAPI/Views/Shared/Chat.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="members-count">-</div>
+﻿
+<div id="chatroom" style="display:none;">@Lib.Entities.Global.RoomId</div>
+<div class="members-count">-</div>
 <div class="members-list">-</div>
 <div class="messages"></div>
 <form class="message-form" onsubmit="return false;">
