--- a/DemoAPI/Views/Home/Details.cshtml
+++ b/DemoAPI/Views/Home/Details.cshtml
@@ -271,8 +271,7 @@
                                 }
                                 return 0;
                             }
-
-
+                            
                         }
                     }
 
@@ -297,10 +296,8 @@
                             }
                             return 0;
                         }
-                        if (app.chessMatrix[i + 2][[chess[1] + 1]].id.indexOf("ma" + mau) >= 0 && app.chessMatrix[i + 1][[chess[1] + 1]].id) {
-                            return 1;
-                        }
-                        return 0;
+                        
+                            
 
                     }
 
@@ -366,11 +363,9 @@
                     else if (app.KiemTraChieuTuongNgang(tuong, mau) == 1) {
                         return 1;
 
+                    } else if (app.KiemTraChieuTuongMa(tuong, mau) == 1) {
+                        return 1;
                     }
-
-
-
-
                 }
                 else if (tuong == "chutuongden") {
 
@@ -382,6 +377,9 @@
                     else if (app.KiemTraChieuTuongNgang(tuong, mau) == 1) {
                         return 1;
                     }
+                    else if (app.KiemTraChieuTuongMa(tuong, mau) == 1) {
+                        return 1;
+                    }
 
 
                 }
@@ -389,6 +387,40 @@
 
                 return 0;
             
+            },
+            KiemTraChieuTuongMa(tuong, mau) {
+                var chess = app.KiemTraTuong(tuong);
+                for (let i = 0; i < 9; i++) {
+                    for (let j = 0; j < 8; j++) {
+                        if (app.chessMatrix[i][j].id) {
+                            if (((Math.abs(i - chess[0]) == 2 && Math.abs(j - chess[1]) == 1)
+                                || (Math.abs(i - chess[0]) == 1 && Math.abs(j - chess[1]) == 2))
+                                && (app.chessMatrix[i][j].id.indexOf("ma" + mau) >= 0) && app.KiemTraChieuTuongChanMa(tuong)==0) {
+                                return 1;
+                            }
+                        }
+                    }
+                }
+                return 0;
+
+
+            },
+            KiemTraChieuTuongChanMa(tuong) {
+                var chess = app.KiemTraTuong(tuong);
+                for (let i = 0; i < 9; i++) {
+                    for (let j = 0; j < 8; j++) {
+                        if (app.chessMatrix[i][j].id) {
+                            if (((Math.abs(i - chess[0]) == 1 && Math.abs(j - chess[1]) == 1)
+                                || (Math.abs(i - chess[0]) == 1 && Math.abs(j - chess[1]) == 1))
+                                && (app.chessMatrix[i][j].id)) {
+                                return 1;
+                            }
+                        }
+                    }
+                }
+                return 0;
+
+
             },
             kiemTraThang(stopI, startI, stopJ, startJ) {
                 var check = 0;
@@ -418,6 +450,7 @@
                 }
                 return check;
             },
+          
 
         },
         updated: function () {
@@ -545,22 +578,37 @@
                             }
 
 
-                        if ((this.id.indexOf("xedo1") >= 0 || this.id.indexOf("xedo2") >= 0) && app.player == true) {
+                        if (this.id.indexOf("xedo1") >= 0 || this.id.indexOf("xedo2") >= 0 && app.player == true) {
 
 
-                                if (((Math.abs(app.indexStopI - app.indexStartI) == 0 && Math.abs(app.indexStopJ - app.indexStartJ) <= 8) ||
-                                    (Math.abs(app.indexStopI - app.indexStartI) <= 9 && Math.abs(app.indexStopJ - app.indexStartJ) == 0))
-                                    && (app.indexStopJ >= 0 && app.indexStopJ <= 8 && app.indexStopI >= 0 && app.indexStopI <= 9) && app.kiemTraThang(app.indexStopI, app.indexStartI, app.indexStopJ, app.indexStartJ) == 0 &&
-                                    app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, this.id) != 1) {
-                                    if (app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, app.chessMatrix[app.indexStartI][app.indexStartJ].id) == -1 ) {
-                                        
+                            if (((Math.abs(app.indexStopI - app.indexStartI) == 0 && Math.abs(app.indexStopJ - app.indexStartJ) <= 8) ||
+                                (Math.abs(app.indexStopI - app.indexStartI) <= 9 && Math.abs(app.indexStopJ - app.indexStartJ) == 0))
+                                && (app.indexStopJ >= 0 && app.indexStopJ <= 8 && app.indexStopI >= 0 && app.indexStopI <= 9) && app.kiemTraThang(app.indexStopI, app.indexStartI, app.indexStopJ, app.indexStartJ) == 0 &&
+                                app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, this.id) != 1) {
+                                if (app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, app.chessMatrix[app.indexStartI][app.indexStartJ].id) == -1) {
+
+                                    if ((app.chessMatrix[app.indexStopI][app.indexStopJ].id.indexOf("tuongden") >= 0) && (app.indexStartI > app.indexStopI)) {
+                                        app.revert(originalleft, originaltop, this.id);
+                                    }
+                                    else {
                                         if (app.chessMatrix[app.indexStopI][app.indexStopJ].id.indexOf("chutuong") >= 0) {
                                             alert("hết cờ");
                                             location.reload(true);
                                         }
-
                                         $("#" + app.chessMatrix[app.indexStopI][app.indexStopJ].id).hide();
+                                        flagVsb = false;
+                                        var node = $("#" + this.id);
+                                        node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
+                                        node.css({ 'left': app.chessMatrix[app.indexStopI][app.indexStopJ].left + 'px' });
+                                        node.css({ 'z-index': '1' });
+                                        app.$set(app.chessMatrix[app.indexStartI][app.indexStartJ], "id", "");
+
+                                        flag = true;
+                                        app.player = false;
                                     }
+
+                                }
+                                else {
                                     var node = $("#" + this.id);
                                     node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
                                     node.css({ 'left': app.chessMatrix[app.indexStopI][app.indexStopJ].left + 'px' });
@@ -570,6 +618,9 @@
                                     flag = true;
                                     app.player = false;
                                 }
+
+
+                            }
 
                         }
                         if ((this.id.indexOf("phaodo1") >= 0 || this.id.indexOf("phaodo2") >= 0)&& app.player == true) {
@@ -653,22 +704,45 @@
 
 
                         if (this.id.indexOf("chutuongden") >= 0 && app.player == false) {
-                            if (((Math.abs(app.indexStopI - app.indexStartI) == 0 && Math.abs(app.indexStopJ - app.indexStartJ) == 1) ||
-                                (Math.abs(app.indexStopI - app.indexStartI) == 1 && Math.abs(app.indexStopJ - app.indexStartJ) == 0))
-                                && (app.indexStopJ >= 3 && app.indexStopJ <= 5 && app.indexStopI >= 7 && app.indexStopI <= 9) &&
+                            if (((Math.abs(app.indexStopI - app.indexStartI) == 0 && Math.abs(app.indexStopJ - app.indexStartJ) <= 8) ||
+                                (Math.abs(app.indexStopI - app.indexStartI) <= 9 && Math.abs(app.indexStopJ - app.indexStartJ) == 0))
+                                && (app.indexStopJ >= 0 && app.indexStopJ <= 8 && app.indexStopI >= 0 && app.indexStopI <= 9) && app.kiemTraThang(app.indexStopI, app.indexStartI, app.indexStopJ, app.indexStartJ) == 0 &&
                                 app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, this.id) != 1) {
                                 if (app.hasChessNode(app.chessMatrix[app.indexStopI][app.indexStopJ].left, app.chessMatrix[app.indexStopI][app.indexStopJ].top, app.chessMatrix[app.indexStartI][app.indexStartJ].id) == -1) {
 
-                                    $("#" + app.chessMatrix[app.indexStopI][app.indexStopJ].id).hide();
-                                }
-                                var node = $("#" + this.id);
-                                node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
-                                node.css({ 'left': app.chessMatrix[app.indexStopI][app.indexStopJ].left + 'px' });
-                                node.css({ 'z-index': '1' });
-                                app.$set(app.chessMatrix[app.indexStartI][app.indexStartJ], "id", "");
+                                    if ((app.chessMatrix[app.indexStopI][app.indexStopJ].id.indexOf("chutuong") >= 0) && (app.indexStartI > app.indexStopI)) {
+                                        app.revert(originalleft, originaltop, this.id);
+                                    }
+                                    else {
+                                        if (app.chessMatrix[app.indexStopI][app.indexStopJ].id.indexOf("chutuong") >= 0) {
+                                            alert("hết cờ");
+                                            location.reload(true);
+                                        }
+                                        $("#" + app.chessMatrix[app.indexStopI][app.indexStopJ].id).hide();
+                                        flagVsb = false;
+                                        var node = $("#" + this.id);
+                                        node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
+                                        node.css({ 'left': app.chessMatrix[app.indexStopI][app.indexStopJ].left + 'px' });
+                                        node.css({ 'z-index': '1' });
+                                        app.$set(app.chessMatrix[app.indexStartI][app.indexStartJ], "id", "");
 
-                                flag = true;
-                                app.player = true;
+                                        flag = true;
+                                        app.player = true;
+                                    }
+
+                                }
+                                else {
+                                    var node = $("#" + this.id);
+                                    node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
+                                    node.css({ 'left': app.chessMatrix[app.indexStopI][app.indexStopJ].left + 'px' });
+                                    node.css({ 'z-index': '1' });
+                                    app.$set(app.chessMatrix[app.indexStartI][app.indexStartJ], "id", "");
+
+                                    flag = true;
+                                    app.player = true;
+                                }
+
+
                             }
                             
                         }
@@ -835,6 +909,8 @@
                                         location.reload(true);
                                     }
                                     $("#" + app.chessMatrix[app.indexStopI][app.indexStopJ].id).hide();
+                                    //var movelist = [{ id: app.chessMatrix[app.indexStopI][app.indexStopJ].id, top: 999, left: 999, visible: false }];
+                                    //app.sendMoveList(movelist);
                                 }
                                 var node = $("#" + this.id);
                                 node.css({ 'top': app.chessMatrix[app.indexStopI][app.indexStopJ].top + 'px' });
@@ -857,21 +933,10 @@
 
                             }
                             else {
-                                //var movelist;
-                                //try {
-                                //    movelist = [{
-                                //        id: 'chutuongdo', top: '61', left: '402', visible: false
-                                //    }];
-                                //}
-                                //catch (error) {
-                                //    app.revert(originalleft, originaltop, this.id);
-                                //}
+                                
 
                                 var res = axios.post('/api/chess/movenode', movelist).then(response => {
-                                    //this.chessRoom = response.data.data;
-                                    //alert(response);
-                                    @*console.log(app.KiemTraChieuTuong("chutuongdo"));
-                                    console.log(app.KiemTraChieuTuong("chutuongden"+"hmmm"));*@
+                                    
                                     if (app.KiemTraChieuTuong("chutuongdo") == 1) {
                                         alert("chiếu tướng");
                                     }
